[gd_scene load_steps=7 format=2]

[ext_resource path="res://Scenes/ResultBar.gd" type="Script" id=1]
[ext_resource path="res://Fonts/Roboto_Medium.tres" type="DynamicFont" id=2]
[ext_resource path="res://Images/UI/stretch_bar.png" type="Texture" id=3]
[ext_resource path="res://Images/UI/stretch_progress.png" type="Texture" id=4]
[ext_resource path="res://Fonts/RobotoCondensed-Regular.ttf" type="DynamicFontData" id=5]

[sub_resource type="DynamicFont" id=1]
size = 56
font_data = ExtResource( 5 )

[node name="ResultBar" type="MarginContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="ResultContainer" type="VBoxContainer" parent="."]
margin_right = 1920.0
margin_bottom = 1080.0

[node name="LabelMargin" type="MarginContainer" parent="ResultContainer"]
margin_right = 1920.0
margin_bottom = 75.0

[node name="Label" type="Label" parent="ResultContainer/LabelMargin"]
margin_right = 1920.0
margin_bottom = 75.0
custom_fonts/font = ExtResource( 2 )
text = "Placeholder"
align = 1
valign = 1

[node name="ProgressContainer" type="MarginContainer" parent="ResultContainer"]
margin_top = 79.0
margin_right = 1920.0
margin_bottom = 175.0

[node name="ProgressBack" type="TextureProgress" parent="ResultContainer/ProgressContainer"]
margin_right = 1920.0
margin_bottom = 96.0
rect_min_size = Vector2( 0, 96 )
min_value = -10.0
value = 100.0
texture_under = ExtResource( 3 )
texture_progress = ExtResource( 4 )
tint_progress = Color( 0.180392, 0.886275, 1, 1 )
nine_patch_stretch = true
stretch_margin_left = 64
stretch_margin_right = 64

[node name="ProgressFront" type="TextureProgress" parent="ResultContainer/ProgressContainer"]
margin_right = 1920.0
margin_bottom = 96.0
rect_min_size = Vector2( 0, 96 )
size_flags_horizontal = 3
min_value = -10.0
max_value = 110.0
value = 60.0
texture_progress = ExtResource( 4 )
fill_mode = 1
tint_progress = Color( 1, 0.368627, 0.223529, 1 )
nine_patch_stretch = true
stretch_margin_left = 48
stretch_margin_right = 48

[node name="MarginContainer" type="MarginContainer" parent="ResultContainer/ProgressContainer"]
margin_right = 1920.0
margin_bottom = 96.0
custom_constants/margin_right = 40
custom_constants/margin_left = 40

[node name="Player" type="Label" parent="ResultContainer/ProgressContainer/MarginContainer"]
margin_left = 40.0
margin_right = 1880.0
margin_bottom = 96.0
size_flags_vertical = 5
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "2"
valign = 1

[node name="Enemy" type="Label" parent="ResultContainer/ProgressContainer/MarginContainer"]
margin_left = 40.0
margin_right = 1880.0
margin_bottom = 96.0
size_flags_vertical = 5
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "3"
align = 2
valign = 1
